--- a/Simple RNN.ipynb
+++ b/Simple RNN.ipynb
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "82.40052283569366\n"
+      "71.60371367045424\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'dsiaexdreejumd\\nlaecujlumedzobkboyipqbrwytnsjjyardslaqsazlrugebwzstlzumtwee\\nkvryl\\nl\\nnlzvoqcwf\\nbo\\ntrwz'"
+       "'kah\\nlshpneqmnrlagv\\nr\\ninuks\\nmazmafav\\naajpodlgxkis\\nvaghazms\\neuqvasqafseamvzsb\\nqcguybavaqcotvelygcm\\n\\ngm'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
